--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
